--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
                 </div>
                 <div class="row">
                     <div class="col-1 d-flex align-items-center p-0">
-                        <img class="img-fluid" src="./img/brus.png" alt="">
                     </div>
                     <div class="col-10 col-xs-12">
                         <div class="row justify-content-between">
@@ -194,7 +193,6 @@
                         </div>
                     </div>
                     <div class="col-1 d-flex align-items-center p-0">
-                        <img class="img-fluid" src="./img/brus.png" alt="">
                     </div>
                 </div>
             </div>
@@ -255,7 +253,7 @@
                         <span class="p-1 white-color">
                             <i class="bi bi-envelope"></i>
                         </span>
-                        PinturasMS@hotmail.com
+                        marianoo_24@hotmail.com
                     </h4>
                     <h4>
                         <span class="p-1 white-color">
