--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav>
                 <ul>
                     <li><a href="#nosotros">Quienes somos</a></li>
-                    <li><a href="#catalogo">Catálogo</a></li>
+                    <li><a href="#catalogo">Trabajos</a></li>
                     <li><a href="#contacto">Contacto</a></li> <!-- Agregar id a seccion contacto para link -->
                 </ul>
             </nav>
